# The-No-Shoelace-Place

./: .gitignore  README.md  app.py  app.yaml  pyproject.toml  requirements.txt  setup.cfg  tox.ini  wsgi.py
.github/workflows/: tests.yml
game_backend/: driver_code.py  gl_backend_functions.py  input_organizer.py  js_functions.py  test.py  test_stuff.py
game_backend/classes/: ability_class.py  calendar_class.py  character_class.py  event_class.py  game_class.py  item_class.py  npc_class.py  parser_class.py  room_class.py
game_backend/objects/: abilities.py  events.py  items.py  rooms.py
html_tests/: test.html
src/tnslp/: app.py  app.yaml  package-lock.json  package.json  requirements.txt  wsgi.py
src/tnslp/game_backend/classes/: ability_class.py  calendar_class.py  character_class.py  condition_class.py  event_class.py  game_class.py  item_class.py  npc_class.py  parser_class.py  room_class.py
src/tnslp/game_backend/objects/: abilities.py  events.py  items.py  rooms.py
src/tnslp/static/: site.css  site.js
src/tnslp/templates/: game.html  instructions.html  welcome.html
static/: game-map.css  mobile-site.css  site.css  site.js
templates/: credits.html  game.html  game_page.html  hello_there.html  home.html  home_image.html  instructions.html  layout.html  method_not_allowed.html  page_not_found.html  quotes.html  welcome.html
tests/: test_stuff.py
