[metadata]
name = The No-Shoelace Place
description = text-based choose your own adventure game 
author = Brock Britton
license = MIT
license_file = LICENSE
platforms = linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    tnslp
install_requires =
    requests>=2
    num2words>=0.5.10
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24
