[metadata]
name = The No-Shoelace Place
description = text-based choose your own adventure game 
author = Brock Britton
author_email = brockbritton@outlook.com
license = MIT
license_file = LICENSE
platforms = linux, osx, win32
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3

[options]
packages =
    game_backend
python_requires = >=3.10
install_requires =
    requests>=2
    num2words>=0.5.10
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24
